Refactor and enhance index.html structure

--- a/index.html
+++ b/index.html
@@ -1,8 +1,46 @@
-<script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-<script defer src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>BLE AI Community Finder</title>
+
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+
+<style>
+body{font-family:system-ui;background:#0f172a;color:white;padding:20px;margin:0;}
+.card{background:#1e293b;padding:20px;border-radius:20px;max-width:500px;margin:auto;}
+button{width:100%;padding:14px;margin-top:12px;border:none;border-radius:12px;font-weight:bold;font-size:16px;cursor:pointer;}
+.primary{background:#3b82f6;color:white;}
+.secondary{background:#334155;color:white;}
+.ai{background:#9333ea;color:white;}
+.status-ok{color:#22c55e;}
+.status-bad{color:#ef4444;}
+#map{height:400px;margin-top:15px;border-radius:15px;display:none;}
+</style>
+</head>
+<body>
+
+<div class="card">
+<h2>BLE AI Community Finder</h2>
+
+<p>Device: <b id="deviceName">Not Registered</b></p>
+<p>Status: <b id="status" class="status-bad">NOT CONNECTED</b></p>
+
+<button class="primary" onclick="connectTag()">Register Tag (Owner)</button>
+<button class="secondary" onclick="communityScan()">Community Scan</button>
+<button class="secondary" onclick="showLocation()">Show Location</button>
+<button class="ai" onclick="runAI()">Run AI Analysis</button>
+
+<div id="map"></div>
+</div>
 
 <script>
-document.addEventListener("DOMContentLoaded", function(){
 
 /* ================= FIREBASE ================= */
 
@@ -23,10 +61,30 @@ const db = firebase.firestore();
 let deviceId = localStorage.getItem("bleDeviceId");
 let map = null;
 let currentMode = "community";
+let alertInitialized = false;
+
+/* ================= AUTO OWNER LISTENER ================= */
+
+window.onload = function(){
+
+if(deviceId){
+currentMode = "owner";
+listenForOwnerAlerts();
+
+if(Notification.permission!=="granted"){
+Notification.requestPermission();
+}
+
+document.getElementById("deviceName").innerText="Registered Device";
+document.getElementById("status").innerText="OWNER ACTIVE";
+document.getElementById("status").className="status-ok";
+}
+
+}
 
 /* ================= OWNER REGISTER ================= */
 
-window.connectTag = async function(){
+async function connectTag(){
 
 currentMode = "owner";
 
@@ -36,7 +94,7 @@ deviceId = bleDevice.id;
 localStorage.setItem("bleDeviceId",deviceId);
 
 document.getElementById("deviceName").innerText=bleDevice.name||"Registered Device";
-document.getElementById("status").innerText="READY";
+document.getElementById("status").innerText="OWNER ACTIVE";
 document.getElementById("status").className="status-ok";
 
 await db.collection("registeredTags").doc(deviceId).set({
@@ -53,11 +111,27 @@ listenForOwnerAlerts();
 alert("Device Registered Successfully!");
 }
 
-/* ================= OWNER ALERT ================= */
+/* ================= OWNER ALERT SYSTEM ================= */
+
+function playAlarm(){
+
+let count = 0;
+const interval = setInterval(()=>{
+if(navigator.vibrate){
+navigator.vibrate([400,200,400]);
+}
+count++;
+if(count >= 5){
+clearInterval(interval);
+}
+},1000);
+
+}
 
 function listenForOwnerAlerts(){
 
-if(!deviceId) return;
+if(!deviceId || alertInitialized) return;
+alertInitialized = true;
 
 db.collection("detections")
 .where("deviceId","==",deviceId)
@@ -67,12 +141,14 @@ snapshot.docChanges().forEach(change=>{
 
 if(change.type==="added"){
 
-if(navigator.vibrate){
-navigator.vibrate([300,200,300]);
-}
+playAlarm();
 
 if(Notification.permission==="granted"){
-new Notification("Your device was detected by community!");
+for(let i=0;i<5;i++){
+setTimeout(()=>{
+new Notification("🚨 Your device was detected!");
+}, i*1000);
+}
 }
 
 }
@@ -82,9 +158,9 @@ new Notification("Your device was detected by community!");
 });
 }
 
-/* ================= COMMUNITY ================= */
+/* ================= COMMUNITY SCAN ================= */
 
-window.communityScan = async function(){
+async function communityScan(){
 
 currentMode = "community";
 document.getElementById("map").style.display="none";
@@ -115,12 +191,11 @@ return;
 }
 
 alert("Device not registered.");
-
 }
 
 /* ================= OWNER MAP ================= */
 
-window.showLocation = async function(){
+async function showLocation(){
 
 if(currentMode!=="owner"){
 alert("Only owner can view map");
@@ -144,7 +219,7 @@ renderMap(points,false);
 
 /* ================= AI ================= */
 
-window.runAI = async function(){
+async function runAI(){
 
 if(currentMode!=="owner"){
 alert("Only owner can run AI");
@@ -166,7 +241,7 @@ snapshot.forEach(doc=>points.push(doc.data()));
 renderMap(points,true);
 }
 
-/* ================= MAP ================= */
+/* ================= MAP WITH PROPER LABELS ================= */
 
 function renderMap(points,runAI){
 
@@ -179,15 +254,25 @@ map=null;
 
 map=L.map("map").setView([points[0].lat,points[0].lng],18);
 
+/* Esri Satellite */
 L.tileLayer(
 "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
-{attribution:"Tiles © Esri"}
+{
+attribution:"Tiles © Esri",
+maxZoom:20
+}
 ).addTo(map);
 
+/* OpenStreetMap Labels Overlay */
 L.tileLayer(
-"https://server.arcgisonline.com/ArcGIS/rest/services/Reference/World_Boundaries_and_Places/MapServer/tile/{z}/{y}/{x}"
+"https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
+{
+maxZoom:19,
+opacity:0.5
+}
 ).addTo(map);
 
+/* Blue detection dots */
 points.forEach(p=>{
 L.circleMarker([p.lat,p.lng],{
 radius:7,
@@ -197,6 +282,7 @@ fillOpacity:1
 }).addTo(map);
 });
 
+/* AI Red Dot */
 if(runAI){
 
 let avgLat=0,avgLng=0;
@@ -222,5 +308,6 @@ map.setView([avgLat,avgLng],18);
 setTimeout(()=>map.invalidateSize(),300);
 }
 
-});
 </script>
+</body>
+</html>
